8356963: [lworld] MemNode::optimize_simple_memory_chain fails with "sanity check for basic cases"

Reviewed-by: thartmann